--- a/public/index.html
+++ b/public/index.html
@@ -8,30 +8,30 @@
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Agar.io</title>
+    <title>KoAgarIo.tk</title>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="jquery.js"></script>
     <script src="quadtree.js"></script>
     <script src="main_out.js"></script>
-    <style>body{padding:0;margin:0;overflow:hidden;}#canvas{position:absolute;left:0;right:0;top:0;bottom:0;width:100%;height:100%;}.checkbox label{margin-right:10px;}form{margin-bottom:0px;}.btn-play,.btn-settings,.btn-spectate{display:block;height:35px;}.btn-play{width:85%;float:left;}.btn-settings{width:13%;float:right;}.btn-spectate{display:block;float:right;}#adsBottom{position:absolute;left:0;right:0;bottom:0;}#adsBottomInner{margin:0px auto;width:728px;height:90px;border:5px solid white;border-radius:5px 5px 0px 0px;background-color:#FFFFFF;box-sizing:content-box;}.region-message{display:none;margin-bottom:12px;margin-left:6px;margin-right:6px;text-align:center;}#nick,#locationKnown #region{width:65%;float:left;}#locationUnknown #region{margin-bottom:15px;}#gamemode,#spectateBtn{width:33%;float:right;}#helloDialog{width:350px;background-color:#FFFFFF;margin:10px auto;border-radius:15px;padding:5px 15px 5px 15px;position:absolute;top:50%;left:50%;margin-right:-50%;-webkit-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);transform:translate(-50%,-50%);}</style>
+    <style>body{padding:0;margin:0;overflow:hidden;font-family: "NanumGothic","Malgun Gothic";}#canvas{position:absolute;left:0;right:0;top:0;bottom:0;width:100%;height:100%;}.checkbox label{margin-right:10px;}form{margin-bottom:0px;}.btn-play,.btn-settings,.btn-spectate{display:block;height:35px;}.btn-play{width:85%;float:left;}.btn-settings{width:13%;float:right;}.btn-spectate{display:block;float:right;}#adsBottom{position:absolute;left:0;right:0;bottom:0;}#adsBottomInner{margin:0px auto;width:728px;height:90px;border:5px solid white;border-radius:5px 5px 0px 0px;background-color:#FFFFFF;box-sizing:content-box;}.region-message{display:none;margin-bottom:12px;margin-left:6px;margin-right:6px;text-align:center;}#nick,#locationKnown #region{width:65%;float:left;}#locationUnknown #region{margin-bottom:15px;}#gamemode,#spectateBtn{width:33%;float:right;}#helloDialog{width:350px;background-color:#FFFFFF;margin:10px auto;border-radius:15px;padding:5px 15px 5px 15px;position:absolute;top:50%;left:50%;margin-right:-50%;-webkit-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);transform:translate(-50%,-50%);}</style>
   </head>
   <body>
     <div id="overlays" style="display:none; position: absolute; left: 0; right: 0; top: 0; bottom: 0; background-color: rgba(0,0,0,0.5); z-index: 200;">
       <div id="helloDialog" style="">
         <form role="form">
           <div class="form-group">
-            <h2><center>Agar.io</center></h2>
+            <h2><center>KoAgarIo.tk - Agar.io 한국 서버</center></h2>
           </div>
           <div class="form-group">
             <input id="nick" class="form-control" placeholder="Nick" maxlength="14"/>
             <select id="gamemode" class="form-control" onchange="setGameMode($(this).val());" required>
               <option selected value="">FFA</option>
-              <option value=":teams">Teams</option>
+              <!--<option value=":teams">Teams</option>-->
             </select>
             <br clear="both"/>
           </div>
-          <div id="locationUnknown">
+          <!--<div id="locationUnknown">
             <select id="region" class="form-control" onchange="setRegion($('#region').val());" required>
               <option selected disabled value=""> -- Select a Region -- </option>
               <option value="US-Fremont">US West</option>
@@ -44,7 +44,7 @@
               <option value="CN-China">China</option>
               <option value="SG-Singapore">Oceania</option>
             </select>
-          </div>
+          </div> -->
           <div>
             <div class="text-muted region-message CN-China">
 
@@ -62,29 +62,29 @@
               <br clear="both"/>
             </div>
             <div style="margin: 6px;">
-              <label><input type="checkbox" onchange="setSkins(!$(this).is(':checked'));"> No skins</label>
-              <label><input type="checkbox" onchange="setNames(!$(this).is(':checked'));"> No names</label>
-              <label><input type="checkbox" onchange="setDarkTheme($(this).is(':checked'));"> Dark Theme</label>
-              <label><input type="checkbox" onchange="setColors($(this).is(':checked'));"> No colors</label>
-              <label><input type="checkbox" onchange="setShowMass($(this).is(':checked'));"> Show mass</label>
+              <label><input type="checkbox" onchange="setSkins(!$(this).is(':checked'));"> 스킨 제거</label>
+              <label><input type="checkbox" onchange="setNames(!$(this).is(':checked'));"> 이름 제거</label>
+              <label><input type="checkbox" onchange="setDarkTheme($(this).is(':checked'));"> 검정 테마</label>
+              <label><input type="checkbox" onchange="setColors($(this).is(':checked'));"> 색 제거</label>
+              <label><input type="checkbox" onchange="setShowMass($(this).is(':checked'));"> 크기 보이기</label>
             </div>
           </div>
         </form>
         <div id="instructions">
           <hr/>
           <center><span class="text-muted">
-              Move your mouse to control your cell<br/>
-              Press <b>Space</b> to split<br/>
-              Press <b>W</b> to eject some mass<br/>
+              마우스를 움직여서 세포를 움직이세요.<br/>
+              <b>스페이스바</b>를 눌러서 쪼갤 수 있어요.<br/>
+              <b>W</b>를 누르면 조그마한 덩어리를 내뿜어요.<br/>
             </span></center>
         </div>
         <hr/>
         <hr style="margin-bottom: 7px; "/>
-        <div style="margin-bottom: 5px; float: left; line-height: 32px; margin-left: 6px; height: 32px;">
+        <!--<div style="margin-bottom: 5px; float: left; line-height: 32px; margin-left: 6px; height: 32px;">
           <a href="privacy.txt" class="text-muted">Privacy Policy</a>
           |
           <a href="changelog.txt" class="text-muted">Changelog</a>
-        </div>
+      </div>-->
         <br clear="both"/>
       </div>
     </div>
